--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ pandas = "^2.2.1"
 lxml = "^5.1.0"
 sqlalchemy = "^2.0.29"
 streamlit = "^1.32.2"
+openpyxl = "^3.1.2"
+tabula = "^1.0.5"
+tabula-py = "^2.9.0"
 
 
 [build-system]
