--- a/requirements.txt
+++ b/requirements.txt
@@ -38,3 +38,11 @@ zipp==3.18.1
 tabula == 1.0.5
 tabula-py == 2.9.0
 bs4 == 0.0.2
+
+pandas == 2.2.1
+lxml == 5.1.0
+streamlit == 1.32.2
+openpyxl == 3.1.2
+tabula == 1.0.5
+tabula-py == 2.9.0
+bs4 == 0.0.2
