--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["claudio_pontes <claudiohpontes@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "3.9"
+python = "^3.9"
 pandas = "^2.2.1"
 lxml = "^5.1.0"
 streamlit = "^1.32.2"
